<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/cbVenus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbVenusTitle"
        app:layout_constraintBottom_toTopOf="@+id/ptWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/cbMars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbMarsTitle"
        app:layout_constraintBottom_toTopOf="@+id/ptWeight"
        app:layout_constraintEnd_toStartOf="@+id/cbVenus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="237dp"
        android:layout_height="33dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <EditText
        android:id="@+id/ptWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:text="@string/tvResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.363" />

    <CheckBox
        android:id="@+id/cbJupiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jbJupiterTitle"
        app:layout_constraintBottom_toTopOf="@+id/ptWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cbVenus"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:text="@string/tvResult"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptWeight"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/btnShowWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnShow"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ptWeight" />
</androidx.constraintlayout.widget.ConstraintLayout>